2009-01-21  Werner Koch  <wk@g10code.com>

	* fipsdrv.c (run_dsa_verify): Use hash of the data.

	* pubkey.c (get_dsa_key_fips186_with_seed_new): New.
	(check_run): Call it.

2008-12-11  Werner Koch  <wk@g10code.com>

	* fipsdrv.c (run_rsa_derive): New.
	(main): Add mode rsa-derive.

2008-12-10  Werner Koch  <wk@g10code.com>

	* basic.c (main): Check for error after running self-test in
	non-fips mode.

	* pubkey.c (get_dsa_key_with_domain_new): New.
	(get_dsa_key_fips186_with_domain_new): New.
	(check_run): Call them.

2008-12-08  Werner Koch  <wk@g10code.com>

	* fipsdrv.c [W32]: Include fcntl.h.

2008-12-05  Werner Koch  <wk@g10code.com>

	* pubkey.c (get_dsa_key_new): Add arg transient_key.
	(check_run): Use it.

2008-12-03  Werner Koch  <wk@g10code.com>

	* fipsdrv.c (run_dsa_pqg_gen): Facor code out into ..
	(print_dsa_domain_parameters, dsa_gen): .. these two new functions.
	(print_sexp, read_sexp_from_file): New.
	(run_dsa_sign): New.
	(run_dsa_verify): New.

2008-12-02  Werner Koch  <wk@g10code.com>

	* fipsdrv.c: All standalone build.

	* mpitests.c (mpi_powm): New.

2008-11-28  Werner Koch  <wk@g10code.com>

	* fips186-dsa.c: New.

	* fipsdrv.c (print_mpi_line, print_data_line): New.
	(run_dsa_pqg_gen): New.
	(usage): Add mode dsa-pqg-gen.

2008-11-25  Werner Koch  <wk@g10code.com>

	* pubkey.c (get_dsa_key_new): New.

2008-11-24  Werner Koch  <wk@g10code.com>

	* tsexp.c (basic): Add test for format character S.

	* pubkey.c (check_x931_derived_key): New.
	(get_keys_x931_new): New.
	(check_run): Check X9.31 generated RSA key.

2008-11-07  Werner Koch  <wk@g10code.com>

	* fipsdrv.c (run_cipher_mct_loop, get_current_iv): New.
	(read_textline, read_hexline, skip_to_empty_line): New.
	(main): New option --mct-server.
	* cavs_driver.pl: Update from upstream and adjust to new fipsdrv.

2008-11-05  Werner Koch  <wk@g10code.com>

	* fipsdrv.c (run_encrypt_decrypt): Disable weak key detection.

2008-10-31  Werner Koch  <wk@g10code.com>
